<?xml version="1.0"?>
<package format="3">
  <name>panther_battery</name>
  <version>1.0.11</version>

  <description>Nodes monitoring the battery state of Husarion Panhter robot</description>
  <license>Apache License 2.0</license>

  <author email="dawid.kmak@husarion.com">Dawid Kmak</author>
  <maintainer email="support@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/panther_ros</url>
  <url type="bugtracker">https://github.com/husarion/panther_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>panther_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

</package>