<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panther_bringup</name>
  <version>2.0.0</version>
  <description>Default launch files and configuration used to start Husarion Panther robot</description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/panther_ros</url>
  <url type="bugtracker">https://github.com/husarion/panther_ros/issues</url>

  <author email="pawel.kowalski@husarion.com">Paweł Kowalski</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">imu_filter_madgwick</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">panther_battery</exec_depend>
  <exec_depend>panther_controller</exec_depend>
  <exec_depend>panther_lights</exec_depend>
  <exec_depend>panther_manager</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">panther_manager</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">phidgets_spatial</exec_depend>
  <exec_depend>python3-click</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
