<?xml version="1.0"?>
<package format="3">
  <name>panther_description</name>
  <version>0.1.0</version>

  <description>Semantic description of Huasrion Panther robot</description>
  <license>Apache License 2.0</license>

  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
  <maintainer email="support@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/panther_ros</url>
  <url type="bugtracker">https://github.com/husarion/panther_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>joint_state_publisher</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">gazebo_plugins</depend>

</package>