<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panther_diagnostics</name>
  <version>2.0.1</version>
  <description>Package for diagnosting usage of OS on the Panther Robot</description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/panther_ros</url>
  <url type="bugtracker">https://github.com/husarion/panther_ros/issues</url>

  <author email="jakub.delicat@husarion.com">Jakub Delicat</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>pkg-config</build_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>generate_parameter_library</depend>
  <depend>panther_msgs</depend>
  <depend>panther_utils</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
