<?xml version="1.0"?>
<package format="3">
  <name>panther_driver</name>
  <version>1.0.34</version>

  <description>Software for controlling Panther robot motors via CAN interface.</description>
  <license>Apache License 2.0</license>

  <author email="dawid.kmak@husarion.com">Dawid Kmak</author>
  <author email="pawel.kowalski@husarion.com">Paweł Kowalski</author>
  <author email="lukasz.mitka@husarion.com">Łukasz Mitka</author>
  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
  <maintainer email="support@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/panther_ros</url>
  <url type="bugtracker">https://github.com/husarion/panther_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>panther_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>

  <!-- Python dependencies -->
  <depend>canopen-pip</depend>

</package>