<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panther_gazebo</name>
  <version>2.0.1</version>
  <description>The panther_description package</description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/panther_ros</url>
  <url type="bugtracker">https://github.com/husarion/panther_ros/issues</url>

  <author email="pawel.kowalski@husarion.com">Paweł Kowalski</author>
  <author email="maciej.stepien@husarion.com">Maciej Stepien</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">controller_manager</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">husarion_gz_worlds</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">ign_ros2_control</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">launch</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">launch_ros</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">nav2_common</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">panther_bringup</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">robot_state_publisher</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">ros_gz_bridge</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">ros_gz_sim</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == simulation">xacro</exec_depend>
  <!-- Ignition dependency is specified in the ros_gz_sim package,
    version can chosen using GZ_VERSION (or IGNITION_VERSION) env variable,
    for details refer to the ros_gz_sim package -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
